...
              right: 0,
              child: Column(
                mainAxisSize: MainAxisSize.min,
                crossAxisAlignment: CrossAxisAlignment.center,
                children: [
                  const Text(
                    'Boleta generada con éxito',
                    textAlign: TextAlign.center,
                    style: TextStyle(
                      color: Color(0xFF173664),
                      fontSize: 18,
                      fontFamily: 'Montserrat',
                      fontWeight: FontWeight.w600,
...
